<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/init_user_info_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSecondaryLighter"
        tools:context=".screens.userInfo.UserInfoFragment"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:text="@string/add_info_text"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:layout_marginVertical="8dp"
            app:layout_constraintBottom_toTopOf="@id/etName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rect"
            android:hint="@string/enter_name"
            app:layout_constraintTop_toBottomOf="@id/textView3"
            app:layout_constraintBottom_toTopOf="@+id/etWeight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/gothic"
                android:inputType="text"
                android:maxLength="3"
                android:textAlignment="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rect"
            android:hint="@string/weight_hint"
            app:layout_constraintTop_toBottomOf="@id/etName"
            app:layout_constraintBottom_toTopOf="@+id/etWorkTime"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/gothic"
                android:inputType="numberSigned"
                android:maxLength="3"
                android:textAlignment="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etWorkTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rect"
            android:hint="@string/workout_hint"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/etWeight"
            app:layout_constraintBottom_toTopOf="@+id/etWakeUpTime"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/gothic"
                android:inputType="numberSigned"
                android:maxLength="3"
                android:textAlignment="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etWakeUpTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rect"
            android:hint="@string/wakeup_hint"
            app:layout_constraintEnd_toStartOf="@+id/etSleepTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etWorkTime">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/gothic"
                android:inputType="numberSigned"
                android:textAlignment="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etSleepTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rect"
            android:hint="@string/sleeping_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etWakeUpTime"
            app:layout_constraintTop_toBottomOf="@+id/etWorkTime">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/gothic"
                android:inputType="numberSigned"
                android:textAlignment="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/a4_grad"
            android:fontFamily="@font/baloo"
            android:text="@string/str_continue"
            android:textSize="14sp"
            android:typeface="serif"
            app:layout_constraintBottom_toTopOf="@+id/adView"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            app:adSize="BANNER"
            app:adUnitId="@string/google_baner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>