<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSecondaryLighter"
        android:padding="8dp"
        tools:context=".screens.userInfo.UpdateUserInfoFragment">

        <TextView
            android:id="@+id/edit_info_label_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:text="@string/edit_info_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/etWeight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/edit_info_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rect"
            android:hint="@string/weight_hint"
            app:layout_constraintBottom_toTopOf="@+id/etWorkTime"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_info_label_text_view">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/gothic"
                android:inputType="numberSigned"
                android:maxLength="3"
                android:textAlignment="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etWorkTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rect"
            android:hint="@string/workout_hint"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/etWakeUpTime"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etWeight">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/gothic"
                android:inputType="numberSigned"
                android:maxLength="3"
                android:textAlignment="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etWakeUpTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rect"
            android:hint="@string/wakeup_hint"
            app:layout_constraintBottom_toTopOf="@+id/etTarget"
            app:layout_constraintEnd_toStartOf="@+id/etSleepTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etWorkTime">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/gothic"
                android:inputType="numberSigned"
                android:textAlignment="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etSleepTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/rect"
            android:hint="@string/sleeping_hint"
            app:layout_constraintBottom_toTopOf="@+id/etTarget"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etWakeUpTime"
            app:layout_constraintTop_toBottomOf="@+id/etWorkTime">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/gothic"
                android:inputType="numberSigned"
                android:textAlignment="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etTarget"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rect"
            app:layout_constraintBottom_toTopOf="@+id/totalIntakePercentage"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etWakeUpTime">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:fontFamily="@font/gothic"
                android:hint="@string/custom_intake_hint"
                android:inputType="numberSigned"
                android:textAlignment="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/totalIntakePercentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/baloo"
            android:text="@string/notif_setting_header"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/etNotificationText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etTarget"
            tools:text="@string/notif_setting_header" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etNotificationText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_below="@+id/totalIntakePercentage"
            android:background="@drawable/rect"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/totalIntakePercentage">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:fontFamily="@font/gothic"
                android:hint="@string/notif_messsage_hint"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textAlignment="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/a4_grad"
            android:fontFamily="@font/baloo"
            android:text="@string/save"
            android:textSize="15sp"
            android:typeface="serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.951"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNotificationText"
            app:layout_constraintVertical_bias="0.96" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>