<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/init_user_info_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryLighter"
    tools:context="com.whomentors.aqua.Activity.UserInfo">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dip"/>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_rel"
        android:layout_below="@+id/cardviewone"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="none">



        <RelativeLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            >


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="16dp"
                android:text="@string/add_info_text"
                android:textAlignment="center"
                android:fontFamily="@font/baloo"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_below="@+id/textView3"
                android:id="@+id/lin1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/t1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gothic"
                        android:gravity="center"
                        android:layout_marginStart="16dp"
                        android:text="@string/enter_name"
                        android:textColor="@color/colorBlack"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_below="@+id/t1"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/rect">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@null"
                            android:inputType="text"
                            android:fontFamily="@font/gothic"
                            android:paddingBottom="10dp"
                            android:textAlignment="center" />
                    </com.google.android.material.textfield.TextInputLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/t2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gothic"

                        android:singleLine="true"
                        android:text="@string/weight_hint"
                        android:gravity="center"
                        android:layout_marginStart="16dp"
                        android:textColor="@color/colorBlack"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etWeight"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_below="@+id/t2"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/rect">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@null"
                            android:inputType="numberSigned"
                            android:maxLength="3"
                            android:fontFamily="@font/gothic"
                            android:paddingBottom="10dp"
                            android:textAlignment="center" />
                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lin1"

                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/gothic"
                android:gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/workout_hint"
                android:textColor="@color/colorBlack"
                android:textSize="15dp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etWorkTime"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/t3"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rect">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:inputType="numberSigned"
                    android:maxLength="3"
                    android:fontFamily="@font/gothic"
                    android:paddingBottom="10dp"
                    android:textAlignment="center" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/lin2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etWorkTime"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/t4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:gravity="center"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/gothic"

                        android:text="@string/wakeup_hint"
                        android:textColor="@color/colorBlack"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etWakeUpTime"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_below="@+id/t4"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/rect">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@null"
                            android:clickable="true"
                            android:focusable="false"
                            android:fontFamily="@font/gothic"
                            android:inputType="numberSigned"
                            android:textAlignment="center" />
                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>

                <RelativeLayout


                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">


                    <TextView
                        android:id="@+id/t5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/gothic"
                        android:text="@string/sleeping_hint"
                        android:textColor="@color/colorBlack"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etSleepTime"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_below="@+id/t5"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/rect">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@null"
                            android:clickable="true"
                            android:focusable="false"
                            android:inputType="numberSigned"
                            android:paddingStart="10dp"
                            android:fontFamily="@font/gothic"
                            android:paddingBottom="10dp"
                            android:textAlignment="center" />
                    </com.google.android.material.textfield.TextInputLayout>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/bottom_rel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView">

        <Button

            android:id="@+id/btnContinue"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="13dp"
            android:background="@drawable/a4_grad"
            android:text="@string/str_continue"
            android:textSize="14dp"
            android:fontFamily="@font/baloo"
            android:typeface="serif" />
    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="@string/google_baner" />


</RelativeLayout>